--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="description" content="アクティブなコンテンツ！">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
+    <meta name="keywords" content="YEAH!">
+    <meta name="format-detection" content="email=no,telephone=no,address=no">
+    <meta name="msapplication-TileImage" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtn9FYfJU5Ttv1vv-oaxUhRdwdLluzF-Rg3Q&usqp=CAU">
+    <meta name="msapplication-TileColor" content="black"/>
+    <meta name="google" content="notranslate">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>YEAH!~ウェブ上便利ツール~</title>
     <script>
 
