--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
         
         if (pw == "oh,yeah"){
           location.href = "https://hokkeee.github.io/hk_hokke-s-web/";
-        }else{
-          alert("パスワードが違います！");
+        }else if(pw =="ひよってるやついる？"){
+          location.href = "いねぇよなぁ！"
+        } else{
+          alert("パスワードが違います。");
         }
         
         </script>
   </head>
 
   <body>
-      <h1>パスワードが違います。再読み込みしてもう一度お試しください。</h1>
+      <h1 style="color: black;">パスワードが違います。再読み込みしてもう一度お試しください。</h1>
   </body>
 </html>
