--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="dJSoQtXoSFgLYYDHIZaLcSUxxdYK9QcaGj0vikPeSUI" />
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="アクティブなコンテンツ！">
